--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
-    "name": "Image Sound Game",
-    "short_name": "SoundGame",
-    "start_url": "index.html",
-    "display": "standalone",
-    "background_color": "#ffffff",
+    "name": "alephBeit",
+    "short_name": "alephBeit",
+    "start_url": "/",
+    "display": "fullscreen",
+    "background_color": "#f0f0f0",
     "theme_color": "#ffffff",
+    "orientation": "portrait",
+    "scope": "/",
     "icons": [
         {
             "src": "icon.png",
@@ -15,6 +17,18 @@
             "src": "icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "icon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
